--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ jobs:
   build:
     name: Build with Docker
     runs-on: ubuntu-latest
-    needs: notification-start
+
+    steps:
 
     - name: Checkout
       uses: actions/checkout@v2
